--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,8 +50,8 @@ react {
     //   The list of flags to pass to the Hermes compiler. By default is "-O", "-output-source-map"
     // hermesFlags = ["-O", "-output-source-map"]
 
-    project.ext.vertoricons=[
-        iconFontName:['MaterialCommunityIcons.ttf','MaterialIcons.ttf','Ionicons.ttf']
+    project.ext.vectoricons=[
+        iconFontNames:['MaterialCommunityIcons.ttf','MaterialIcons.ttf','Ionicons.ttf']
     ]
     apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
@@ -62,7 +62,7 @@ react {
 /**
  * Set this to true to Run Proguard on Release builds to minify the Java bytecode.
  */
-def enableProguardInReleaseBuilds = false
+def enableProguardInReleaseBuilds = true
 
 /**
  * The preferred build flavor of JavaScriptCore (JSC)
