--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,14 +13,14 @@
       android:allowBackup="false"
       android:useCleartextTraffic="true"
       android:theme="@style/AppTheme"
-      android:hardwareAccelerated:"true"
+      android:hardwareAccelerated="true"
       android:supportsRtl="true">
 
       <meta-data
       android:name="com.google.android.goe.API_KEY"
       android:value='AIzaSyCrOhk4_QihoMuvWNoPZh35Kmi-8AItJHU'
       />
-
+      
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
