--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^7.3.11",
     "axios": "^1.9.0",
     "jwt-decode": "^4.0.0",
+    "lottie": "^0.0.1",
     "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
     "react-native": "0.79.2",
